fixed the overflow in article view

--- a/ui/css/wikiSearch.css
+++ b/ui/css/wikiSearch.css
@@ -36,6 +36,7 @@ form
 	float: right;
 	border-left: 1px solid #AAA;
 	min-width: 320px;
+	width: 320px;
 	padding-left: 20px;
 	margin-right: 20px;
 	min-height: 99%;
@@ -96,8 +97,6 @@ form
 
 #articleView
 {
-	/*width: 800px;
-	height: 600px;*/
 	overflow: auto;
 	border-style: ridge;
 	margin: 0px auto;
